2006-11-01 14:37  antirez

	* jim.c, jim.h: Fix to expr parsing (now hex digits work as
	  literals).  the exit command is now implemented as a special
	  return value of JIM_EXIT.

2005-09-19 17:56  antirez

	* ChangeLog, jim-eventloop.c: Fixed a bug reported by Craig Denson
	  about jim-eveloop.c and filemasks.

2005-09-19 17:47  antirez

	* BUGS, ChangeLog, jim.c: Updated BUGS, fixed some minor problem
	  with GCC 4.x compilation.

2005-09-19 16:17  antirez

	* doc/Sqlite-Extension.txt: Added info about in-memory databases in
	  the Sqlite extension doc.

2005-04-26 15:31  patthoyts

	* jim-win32.c: Check available windows target version for more
	  things.

2005-04-26 12:47  antirez

	* ChangeLog, Makefile, jim-win32.c: mingw compilation fix
	  (excluding the compilation of animate window win32 cmd)

2005-04-21 09:35  patthoyts

	* jim-win32.c: RegisterClass, CreateWindow and UpdateWindow. Need
	  to add user defined Window procedures though.

2005-04-20 17:34  patthoyts

	* jim-win32.c: Added some window managing APIs - MoveWindow,
	  ShowWindow, DestroyWindow and AnimateWindow (which doesn't seem
	  to work).

2005-04-19 17:33  patthoyts

	* jim-win32.c: Added CreateDirectory and RemoveDirectory

2005-04-18 10:31  antirez

	* ChangeLog, Makefile, jim-eventloop.c, jim-eventloop.h, jim.c,
	  jim.h: First version of the Jim eventloop extension, exporting
	  [after], [vwait], and the C API to write other extensions using
	  events. No win32 port for now, just posix. UDP extension will
	  follow shortly and will be the first extension using the event
	  loop.

2005-04-13 21:57  patthoyts

	* jim-win32.c: Added GetLastInputInfo API

2005-04-13 21:54  patthoyts

	* jim-win32api.c: Win32API module permits dynamic creation of Jim
	  commands that call into Win32 DLL functions. Its not complete and
	  at the moment only void or integer parameters are working.

2005-04-13 21:50  patthoyts

	* jimsh.c: JimGetExePath needs to be a _path_ not the file name.
