@@ -1,3 +1,8 @@
+2006-11-01 17:03  antirez
+
+	* ChangeLog, jim.c: Fixed error message when trying to access a non
+	  existing key in dictionary
+
 2006-11-01 14:37  antirez
 
 	* jim.c, jim.h: Fix to expr parsing (now hex digits work as
